--- a/송성민/work.html
+++ b/송성민/work.html
@@ -672,7 +672,7 @@
                     }
                     // Tilt the image wrap and texts when mouse moving the current slide.
                     tilt(ev) {
-                        const mousepos = getMousePos(ev);
+                        // const mousepos = getMousePos(ev);
                         // Document scrolls.
                         const docScrolls = {
                             left: document.body.scrollLeft + document.documentElement.scrollLeft,
