--- a/안지은/index.html
+++ b/안지은/index.html
@@ -1,117 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+        <link rel="stylesheet" href="assets/css/reset.css" />
+        <link rel="stylesheet" href="assets/css/style.css" />
 
-    <link rel="stylesheet" href="assets/css/reset.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+            rel="stylesheet"
+        />
+        <link href="https://fonts.googleapis.com/css2?family=Italiana&display=swap" rel="stylesheet" />
+    </head>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
-</head>
+    <body>
+        <header id="header">
+            <h1>
+                <span>design+coding</span>
+                <em>portfolio</em>
+            </h1>
+            <nav>menu</nav>
+        </header>
+        <!-- //header -->
 
-<body>
-    <header id="header">
-        <h1>
-            <span>design+coding</span>
-            <em>portfolio</em>
-        </h1>
-        <nav>menu</nav>
-    </header>
-    <!-- //header -->
+        <section id="section1">
+            <p>
+                어떤 일이라도 노력하고 즐기면 그 결과는 빛을 바란다고 생각합니다. 신입의 열정과 도전정신을 깊숙히 새기며
+                배움에 있어 겸손함을 유지하며 세부적인 곳까지 파고드는 개발자가 되겠습니다.
+            </p>
+            <div class="text">
+                <div>Design</div>
+                <div>Coding</div>
+                <div>Experience</div>
+            </div>
 
-    <section id="section1">
-        <p>
-            어떤 일이라도 노력하고 즐기면 그 결과는 빛을 바란다고 생각합니다.
-            신입의 열정과 도전정신을 깊숙히 새기며 배움에 있어 겸손함을
-            유지하며 세부적인 곳까지 파고드는 개발자가 되겠습니다.
-        </p>
-        <div class="text">
-            <div>Design</div>
-            <div>Coding</div>
-            <div>Experience</div>
-        </div>
+            <div class="scroll"></div>
+            <div id="snowflakes"></div>
+        </section>
+        <!-- //section1 -->
 
-        <div class="scroll"></div>
-        <div id="snowflakes"></div>
-    </section>
-    <!-- //section1 -->
-
-    <section id="section2">
-        <h2>design</h2>
-        <div class="article1">
-            <div class="left">
-                <div class="imgWrap">
-                    <div class="img"></div>
+        <section id="section2">
+            <h2>design</h2>
+            <div class="article1">
+                <div class="left">
+                    <div class="imgWrap">
+                        <div class="img"></div>
+                    </div>
+                </div>
+                <div class="right text">
+                    <h3>Webstandard</h3>
+                    <p>
+                        웹에 관심이 많았던 저는 웹디자인을 코딩을 접하게 되었습니다.<br />
+                        배워보지도 못한 영역이라 처음엔 개념이 안 잡혀있어서<br />
+                        어려웠지만, 매일매일 메모장에 그날의 수업을 웹 수업 1일 차,<br />
+                        2일 차 이렇게 적어가며 네이버 클라우드 입니다.
+                    </p>
+                    <a href="#">view</a>
                 </div>
             </div>
-            <div class="right text">
-                <h3>Webstandard</h3>
-                <p>
-                    웹에 관심이 많았던 저는 웹디자인을 코딩을 접하게 되었습니다.<br>
-                    배워보지도 못한 영역이라 처음엔 개념이 안 잡혀있어서<br>
-                    어려웠지만, 매일매일 메모장에 그날의 수업을 웹 수업 1일 차,<br>
-                    2일 차 이렇게 적어가며 네이버 클라우드 입니다.
-                </p>
-                <a href="#">view</a>
-            </div>
-        </div>
 
-        <div class="article2">
-            <div class="left text">
-                <h3>Webstandard</h3>
-                <p>
-                    웹에 관심이 많았던 저는 웹디자인을 코딩을 접하게 되었습니다.<br>
-                    배워보지도 못한 영역이라 처음엔 개념이 안 잡혀있어서<br>
-                    어려웠지만, 매일매일 메모장에 그날의 수업을 웹 수업 1일 차,<br>
-                    2일 차 이렇게 적어가며 네이버 클라우드 입니다.
-                </p>
-                <a href="#">view</a>
-            </div>
-            <div class="right">
-                <div class="imgWrap">
-                    <div class="img"></div>
+            <div class="article2">
+                <div class="left text">
+                    <h3>Webstandard</h3>
+                    <p>
+                        웹에 관심이 많았던 저는 웹디자인을 코딩을 접하게 되었습니다.<br />
+                        배워보지도 못한 영역이라 처음엔 개념이 안 잡혀있어서<br />
+                        어려웠지만, 매일매일 메모장에 그날의 수업을 웹 수업 1일 차,<br />
+                        2일 차 이렇게 적어가며 네이버 클라우드 입니다.
+                    </p>
+                    <a href="#">view</a>
+                </div>
+                <div class="right">
+                    <div class="imgWrap">
+                        <div class="img"></div>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div class="article3">
-            <div class="left">left</div>
-            <div class="right">right</div>
-        </div>
-    </section>
-    <!-- //section2 -->
+            <div class="article3">
+                <div class="left">left</div>
+                <div class="right">right</div>
+            </div>
+        </section>
+        <!-- //section2 -->
 
-    <section id="section3"></section>
-    <section id="section4"></section>
-    <section id="section5"></section>
-    <section id="section6"></section>
+        <section id="section3"></section>
+        <section id="section4"></section>
+        <section id="section5"></section>
+        <section id="section6"></section>
 
-    <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@latest/bundled/lenis.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@latest/bundled/lenis.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js"></script>
 
-    <script>
-        gsap.registerPlugin(ScrollTrigger);
+        <script>
+            gsap.registerPlugin(ScrollTrigger);
 
-        const lenis = new Lenis({
-            duration: 1.2,
-            easing: (t) => Math.min(1, 1.001 - Math.pow(2, -10 * t)),
-        })
+            const lenis = new Lenis({
+                duration: 1.2,
+                easing: (t) => Math.min(1, 1.001 - Math.pow(2, -10 * t)),
+            });
 
-        function raf(time) {
-            lenis.raf(time)
-            requestAnimationFrame(raf)
-        }
+            function raf(time) {
+                lenis.raf(time);
+                requestAnimationFrame(raf);
+            }
 
-        requestAnimationFrame(raf);
-    </script>
-</body>
-
+            requestAnimationFrame(raf);
+        </script>
+    </body>
 </html>
