--- a/김혜지/index2.html
+++ b/김혜지/index2.html
@@ -953,13 +953,13 @@
                     </g>
                 </svg>
             </div>
-            <div class="bar"></div>
             <div class="bg"></div>
         </section>
         <!-- //section1 -->
 
         <section id="section2">
-            <div>DESIGNER<span class="box1">coding</span>coding<span class="box2">code</span></div>
+            <div class="bar sec1">저에 대해서 소개시켜드릴께요! 😘</div>
+            <div class="dd">DESIGNER<span class="box1">coding</span>coding<span class="box2">code</span></div>
             <div><span class="box3">coding</span>publisher<span class="box4">coding</span>AA</div>
             <hr class="lineImg" />
 
@@ -976,7 +976,48 @@
             </p>
         </section>
         <!-- //section2 -->
-        <section id="section3"></section>
+
+        <section id="section3">
+            <div class="bar sec3">저에 능력에 대해서 알려드릴께요! 🥰</div>
+            <h3 class="title">Skills</h3>
+            <div class="skillWrap">
+                <div class="skill">
+                    <div class="left">
+                        <div class="img">
+                            <span>80%</span>
+                        </div>
+                    </div>
+                    <div class="right">
+                        <h3>HTML & CSS</h3>
+                        <p>
+                            다양한 웹 프로젝트에서의 경험을 바탕으로 HTML과 CSS를 능숙하게 활용하여 사용자 친화적인
+                            웹페이지를 제작할 수 있습니다. 시멘틱 마크업과 CSS 기술을 활용하여, 접근성이 뛰어난
+                            웹사이트를 구현하는 능력을 갖추었습니다.
+                        </p>
+                    </div>
+                    <div class="icon">
+                        <img src="https://hyeji1364.github.io/port2/assets/img/coffee-icon.svg" alt="" />
+                    </div>
+                </div>
+                <div class="skill">
+                    <div class="left">
+                        <div class="img"></div>
+                    </div>
+                    <div class="right">
+                        <h3>HTML & CSS</h3>
+                        <p>
+                            다양한 웹 프로젝트에서의 경험을 바탕으로 HTML과 CSS를 능숙하게 활용하여 사용자 친화적인
+                            웹페이지를 제작할 수 있습니다. 시멘틱 마크업과 CSS 기술을 활용하여, 접근성이 뛰어난
+                            웹사이트를 구현하는 능력을 갖추었습니다.
+                        </p>
+                    </div>
+                    <div class="icon">
+                        <img src="https://hyeji1364.github.io/port2/assets/img/coffee-icon.svg" alt="" />
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- //section3 -->
         <section id="section4"></section>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
