--- a/송성민/contact.html
+++ b/송성민/contact.html
@@ -37,27 +37,27 @@
                 </li>
                 <li class="c2">
                     <span class="num">02</span>
-                    <span class="title">첫번째 댓글입니다.</span>
+                    <span class="title">두번째 댓글입니다.</span>
                 </li>
                 <li class="c3">
                     <span class="num">03</span>
-                    <span class="title">첫번째 댓글입니다.</span>
+                    <span class="title">세번째 댓글입니다.</span>
                 </li>
                 <li class="c4">
                     <span class="num">04</span>
-                    <span class="title">첫번째 댓글입니다.</span>
+                    <span class="title">네번째 댓글입니다.</span>
                 </li>
                 <li class="c5">
                     <span class="num">05</span>
-                    <span class="title">첫번째 댓글입니다.</span>
+                    <span class="title">다섯번째 댓글입니다.</span>
                 </li>
                 <li class="c6">
                     <span class="num">06</span>
-                    <span class="title">첫번째 댓글입니다.</span>
+                    <span class="title">여섯번째 댓글입니다.</span>
                 </li>
                 <li class="c7">
                     <span class="num">07</span>
-                    <span class="title">첫번째 댓글입니다.</span>
+                    <span class="title">일곱번째 댓글입니다.</span>
                 </li>
             </ul>
         </main>
