--- a/이재혁2/index.html
+++ b/이재혁2/index.html
@@ -65,7 +65,72 @@
                                     <div>1</div>
                                     <div>
                                         <h2>실무 경험을 바탕으로 더 빠르게 배워가는 개발자</h2>
-                                        <div class="svg"></div>
+                                        <div class="svg">
+                                            <svg viewBox="0 0 44 44" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path
+                                                    d="M7.02551 12.7136H7.70449C7.70449 12.4143 7.50856 12.1503 7.22213 12.0637L7.02551 12.7136ZM37.4886 12.7136L37.292 12.0637C37.0056 12.1503 36.8096 12.4143 36.8096 12.7136H37.4886ZM36.8096 39.1872C36.8096 39.5622 37.1136 39.8662 37.4886 39.8662C37.8636 39.8662 38.1676 39.5622 38.1676 39.1872H36.8096ZM6.34652 39.1946C6.34652 39.5696 6.65051 39.8736 7.02551 39.8736C7.4005 39.8736 7.70449 39.5696 7.70449 39.1946H6.34652ZM2.17166 8.75567C2.17166 8.30216 2.50599 7.71369 3.49966 7.05482C4.46707 6.41337 5.91173 5.80938 7.75777 5.29165C11.4404 4.25884 16.5669 3.61123 22.2571 3.61123V2.25327C16.4793 2.25327 11.2237 2.90927 7.39108 3.98413C5.47951 4.52024 3.88329 5.17109 2.74923 5.92305C1.64143 6.65759 0.813693 7.60108 0.813693 8.75567H2.17166ZM22.2571 3.61123C27.9472 3.61123 33.0737 4.25884 36.7564 5.29165C38.6024 5.80938 40.0471 6.41337 41.0145 7.05482C42.0081 7.71369 42.3425 8.30216 42.3425 8.75567H43.7004C43.7004 7.60108 42.8727 6.65759 41.7649 5.92305C40.6308 5.17109 39.0346 4.52024 37.1231 3.98413C33.2905 2.90927 28.0348 2.25327 22.2571 2.25327V3.61123ZM7.22213 12.0637C5.5386 11.5543 4.23192 10.9724 3.36112 10.3621C2.47063 9.73803 2.17166 9.18562 2.17166 8.75567H0.813693C0.813693 9.85398 1.56427 10.7611 2.58176 11.4742C3.61895 12.2011 5.07869 12.8339 6.82888 13.3635L7.22213 12.0637ZM42.3425 8.75567C42.3425 9.18562 42.0435 9.73803 41.153 10.3621C40.2822 10.9724 38.9755 11.5543 37.292 12.0637L37.6852 13.3635C39.4354 12.8339 40.8952 12.2011 41.9324 11.4742C42.9499 10.7611 43.7004 9.85398 43.7004 8.75567H42.3425ZM36.8096 12.7136V39.1872H38.1676V12.7136H36.8096ZM6.34652 12.7136V39.1946H7.70449V12.7136H6.34652Z"
+                                                    fill="white"
+                                                />
+                                                <path
+                                                    d="M1.49268 8.81301V35.2404C1.49268 38.4566 10.7892 41.0638 22.2571 41.0638C33.7249 41.0638 43.0215 38.4566 43.0215 35.2404V8.84392"
+                                                    stroke="white"
+                                                    stroke-width="1.35797"
+                                                    stroke-linecap="round"
+                                                />
+                                                <path
+                                                    d="M43.0212 21.7823C43.0212 23.3253 40.9308 24.7313 37.5008 25.7898"
+                                                    stroke="white"
+                                                    stroke-width="1.35797"
+                                                    stroke-linecap="round"
+                                                />
+                                                <path
+                                                    d="M12.8186 3.59875V8.81289"
+                                                    stroke="white"
+                                                    stroke-width="1.35797"
+                                                    stroke-linecap="round"
+                                                />
+                                                <path
+                                                    d="M31.6948 3.59875V8.81289"
+                                                    stroke="white"
+                                                    stroke-width="1.35797"
+                                                    stroke-linecap="round"
+                                                />
+                                                <path
+                                                    d="M1.49268 21.7823C1.49268 23.3279 3.5903 24.7361 7.03071 25.7952"
+                                                    stroke="white"
+                                                    stroke-width="1.35797"
+                                                    stroke-linecap="round"
+                                                />
+                                                <path
+                                                    d="M17.6301 30.5894V36.2524"
+                                                    stroke="white"
+                                                    stroke-width="1.35797"
+                                                    stroke-linecap="round"
+                                                    stroke-linejoin="round"
+                                                />
+                                                <path
+                                                    d="M26.6333 30.5894V36.2524"
+                                                    stroke="white"
+                                                    stroke-width="1.35797"
+                                                    stroke-linecap="round"
+                                                    stroke-linejoin="round"
+                                                />
+                                                <path
+                                                    d="M22.4543 30.5895C22.5929 30.5896 22.7292 30.5533 22.8494 30.4843C22.9696 30.4152 23.0695 30.3157 23.1392 30.1958C23.2088 30.076 23.2457 29.9399 23.2463 29.8013C23.2468 29.6626 23.2109 29.5263 23.1421 29.4059L20.6536 24.2602H23.0271L19.8625 18.7221H22.2359L18.1472 12.5869C18.075 12.4785 17.9771 12.3897 17.8623 12.3282C17.7474 12.2668 17.6192 12.2346 17.489 12.2346C17.3587 12.2346 17.2305 12.2668 17.1157 12.3282C17.0009 12.3897 16.903 12.4785 16.8307 12.5869L12.742 18.72H15.1155L11.9508 24.2581H14.3243L11.8359 29.4038C11.7666 29.5242 11.7303 29.6606 11.7305 29.7995C11.7307 29.9383 11.7674 30.0747 11.837 30.1949C11.9066 30.315 12.0066 30.4147 12.1269 30.484C12.2473 30.5533 12.3837 30.5897 12.5226 30.5895H22.4543Z"
+                                                    stroke="white"
+                                                    stroke-width="1.35797"
+                                                    stroke-linecap="round"
+                                                    stroke-linejoin="round"
+                                                />
+                                                <path
+                                                    d="M25.5342 30.5895H30.9989C31.1208 30.5896 31.2406 30.5577 31.3462 30.497C31.4519 30.4362 31.5397 30.3488 31.601 30.2434C31.6622 30.138 31.6947 30.0184 31.6951 29.8966C31.6956 29.7747 31.664 29.6548 31.6035 29.549L29.416 25.0256H31.5025L28.7205 20.1572H30.807L27.2127 14.764C27.1492 14.6687 27.0632 14.5906 26.9622 14.5366C26.8613 14.4826 26.7486 14.4543 26.6341 14.4543C26.5196 14.4543 26.4069 14.4826 26.3059 14.5366C26.205 14.5906 26.1189 14.6687 26.0554 14.764L24.5533 17.1566"
+                                                    stroke="white"
+                                                    stroke-width="1.35797"
+                                                    stroke-linecap="round"
+                                                    stroke-linejoin="round"
+                                                />
+                                            </svg>
+                                        </div>
                                         <span></span>
                                     </div>
                                     <div>3</div>
