--- a/박소현2/skill.html
+++ b/박소현2/skill.html
@@ -9,10 +9,13 @@
     </head>
 
     <body>
+        <div class="responsive c1920"></div>
+        <div class="responsive c1440"></div>
+
         <div id="section3">
             <div class="titleWrap">
                 <h2 class="split">I am Park So-hyun,<br />who plans, designs, and develops.</h2>
-                <p class="split">
+                <p class="tty split">
                     안녕하세요. 디자인 대학을 졸업하고 3년 동안 그래픽 및 웹 디자이너로 일한 경험이 있습니다. <br />
                     저의 능력을 정리해봤습니다. 하나씩 클릭하면 알 수 있어요! <br />
                     함께 멋진 결과를 만들어나가길 기대합니다.
@@ -27,11 +30,11 @@
             </div>
 
             <main id="skiilMain">
-                <div class="SsvgWrap">
-                    <div class="svg1 abs">
+                <div class="skillWrap">
+                    <div class="skill s1">
                         <img src="assets/img/skill/castle-1.svg" alt="castle" />
                     </div>
-                    <div class="svg2 abs ani1">
+                    <div class="skill s2">
                         <img src="assets/img/skill/bird-1.svg" alt="bird" />
                     </div>
                 </div>
