--- a/박진아/index2.html
+++ b/박진아/index2.html
@@ -59,8 +59,14 @@
                         <div class="img3"></div>
                     </div>
                 </div>
-                <div class="about">
+                <div class="about about2">
                     <div class="title">Skill(2024)</div>
+                    <p class="desc2">
+                        복잡한 문제를 마주할 때마다, 한 걸음 물러서서 단위 테스트를 통해 코드를 한 줄씩<br />꼼꼼히
+                        검토하는 것을 중요하게 생각합니다. <br />문제를 해결한 후 느끼는 성취감과 즐거움은 저에게 큰
+                        동기부여가 됩니다.
+                    </p>
+
                     <div class="skillWrap">
                         <div class="skill">
                             <div class="front">
@@ -189,6 +195,22 @@
 
         <section id="section3">
             <h3>portfolio</h3>
+
+            <div class="sec3-desc">
+                <p class="desc1">
+                    I love design and somehow it has always been part of my life. Started my career as a web
+                    developer.<br />During my university studies at the Academy of Fine Arts in Catania I met Gianni
+                    Latino, teacher and director of the School of Graphics, friend and mentor. Gianni was able to
+                    transmit me his passion for design and graphics.
+                </p>
+                <p class="desc2">
+                    복잡한 문제를 마주할 때마다, 한 걸음 물러서서 단위 테스트를 통해 코드를 한 줄씩<br />꼼꼼히 검토하는
+                    것을 중요하게 생각합니다. <br />문제를 해결한 후 느끼는 성취감과 즐거움은 저에게 큰 동기부여가
+                    됩니다. <br />복잡한 문제를 마주할 때마다, 한 걸음 물러서서 단위 테스트를 통해 코드를 한 줄씩 꼼꼼히
+                    검토하는 것을 중요하게 생각합니다.
+                </p>
+            </div>
+
             <div class="projectWrap">
                 <div class="project p1"></div>
                 <div class="project p2">p2</div>
