--- a/박소현2/skill.html
+++ b/박소현2/skill.html
@@ -9,8 +9,8 @@
     </head>
 
     <body>
-        <div class="responsive c1920"></div>
-        <div class="responsive c1440"></div>
+        <!-- <div class="responsive c1920"></div> -->
+        <!-- <div class="responsive c1440"></div> -->
 
         <div id="section3">
             <div class="titleWrap">
@@ -33,6 +33,28 @@
                 <div class="skillWrap">
                     <div class="skill s1">
                         <img src="assets/img/skill/castle-1.svg" alt="castle" />
+                        <div class="icon js">
+                            <a href="#">
+                                <img src="assets/img/castle/sk_ico_1.svg" alt="sk_ico_1" />
+                                <div class="click"><span></span></div>
+                            </a>
+                        </div>
+                        <div class="icon css">
+                            <img src="assets/img/castle/sk_ico_2.svg" alt="sk_ico_1" />
+                        </div>
+                        <div class="icon figma">
+                            <img src="assets/img/castle/sk_ico_3.svg" alt="sk_ico_1" />
+                        </div>
+                        <div class="icon ja">
+                            <img src="assets/img/castle/sk_ico_4.svg" alt="sk_ico_1" />
+                        </div>
+                        <div class="icon ai">
+                            <img src="assets/img/castle/sk_ico_6.svg" alt="sk_ico_1" />
+                        </div>
+
+                        <div class="icon i1">
+                            <img src="assets/img/castle/castle-3.svg" alt="sk_ico_1" />
+                        </div>
                     </div>
                     <div class="skill s2">
                         <img src="assets/img/skill/bird-1.svg" alt="bird" />
@@ -42,6 +64,24 @@
 
             <div class="bottomWrap">
                 <h3 class="split">smart skill</h3>
+            </div>
+        </div>
+
+        <div class="modal">
+            <div class="modal__inner">
+                <span>design</span>
+                <h3>Figma</h3>
+            </div>
+            <div class="model__close">
+                <a href="#">
+                    <svg class="" viewBox="0 0 24 24">
+                        <path
+                            fill="#000"
+                            d="M19 6.41l-1.41-1.41-5.59 5.59-5.59-5.59-1.41 1.41 5.59 5.59-5.59 5.59 1.41 1.41 5.59-5.59 5.59 5.59 1.41-1.41-5.59-5.59z"
+                        />
+                        <path d="M0 0h24v24h-24z" fill="none" />
+                    </svg>
+                </a>
             </div>
         </div>
 
@@ -62,8 +102,8 @@
             gsap.set(".titleWrap p .line", { opacity: 0, y: 5 });
             gsap.set(".menu li", { opacity: 0, y: 5 });
             gsap.set(".bottomWrap h3 .char", { y: 200 });
-            gsap.set(".SsvgWrap .svg1", { opacity: 0, y: 15 });
-            gsap.set(".SsvgWrap .svg2", { opacity: 0, y: 5 });
+            gsap.set(".skillWrap .s1", { opacity: 0 });
+            gsap.set(".skillWrap .s2", { opacity: 0 });
 
             const tl = gsap.timeline();
 
@@ -72,8 +112,8 @@
                 tl.to(".titleWrap p .line", { opacity: 1, y: 0, stagger: 0.5, duration: 0.5, ease: "power2.out" });
                 tl.to(".menu li", { opacity: 1, y: 0, duration: 0.5, ease: "power2.out" });
                 tl.to(".bottomWrap h3 .char", { y: 0, stagger: 0.02, duration: 0.5, ease: "power4.out" });
-                tl.to(".SsvgWrap .svg1", { opacity: 1, y: 0, duration: 1, ease: "power2.out" });
-                tl.to(".SsvgWrap .svg2", { opacity: 1, y: 0, duration: 1, ease: "power2.out" });
+                tl.to(".skillWrap .s1", { opacity: 1, duration: 1, ease: "power2.out" });
+                tl.to(".skillWrap .s2", { opacity: 1, duration: 1, ease: "power2.out" });
             }, 3000);
         </script>
     </body>
