--- a/김혜지/index2.html
+++ b/김혜지/index2.html
@@ -959,8 +959,8 @@
 
         <section id="section2">
             <div class="bar sec1">저에 대해서 소개시켜드릴께요! 😘</div>
-            <div class="dd">DESIGNER<span class="box1">coding</span>coding<span class="box2">code</span></div>
-            <div><span class="box3">coding</span>publisher<span class="box4">coding</span>AA</div>
+            <div class="dd">DESIGNER<span class="box1"></span>coding<span class="box2"></span></div>
+            <div><span class="box3"></span>publisher<span class="box4"></span>AA</div>
             <hr class="lineImg" />
 
             <div class="picture">
@@ -1018,7 +1018,36 @@
             </div>
         </section>
         <!-- //section3 -->
-        <section id="section4"></section>
+
+        <section id="section4">
+            <div class="bar sec4">코딩 실력을 보여드릴께요! 🥰</div>
+            <h3 class="title">project</h3>
+            <span class="sub">coding</span>
+            <div class="img1">
+                <img src="https://hyeji1364.github.io/port2/assets/img/run-chracter.svg" alt="run" />
+            </div>
+            <div class="img2">
+                <img src="https://decathlon-yeyeweller.index.studio/static/images/stickers/star-blue.png" alt="star" />
+            </div>
+            <div class="workWrap">
+                <div class="center1"></div>
+                <div class="info1">
+                    <h3>유튜브 API를 이용한 뮤직 사이트</h3>
+                    <p>원하는 음악을 재생 플레이를 통해 들을 수 있습니다. 내가 원하는 음악을 무료로 듣는 사이트</p>
+                    <div class="link">
+                        <a href="#">소스 보기</a>
+                        <a href="#">사이트 보기</a>
+                    </div>
+                </div>
+            </div>
+            <div class="workWrap">
+                <div class="center2"></div>
+            </div>
+        </section>
+        <!-- //section4 -->
+
+        <section id="section5"></section>
+        <!-- //section5 -->
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
