--- a/박정민/index2.html
+++ b/박정민/index2.html
@@ -423,6 +423,23 @@
                     <span class="r3">24</span>
                 </div>
             </div>
+
+            <div class="sec5-work">
+                <div class="work work1">
+                    <div class="img"></div>
+                    <div class="info">
+                        <h3>Javascript <span>quiz Game</span></h3>
+                        <p>
+                            자바스크립트를 이용하여 만든 퀴즈게임입니다. <br />정보처리기사 공부겸 정보처리기사 공부겸
+                            정보 만들었습니다.
+                        </p>
+                    </div>
+                    <a href="#"><span>GAME</span>start</a>
+                </div>
+                <div class="work work2"></div>
+                <div class="work work3"></div>
+                <div class="work work4"></div>
+            </div>
         </section>
         <!-- //section5 -->
 
