--- a/박정민/index.html
+++ b/박정민/index.html
@@ -343,6 +343,12 @@
                     <a href="#">코드 보기</a>
                 </div>
             </div>
+            <div class="imgWrap">
+                <div class="img img1"></div>
+                <div class="img img2"></div>
+                <div class="img img3"></div>
+                <div class="img img4"></div>
+            </div>
         </section>
         <section id="section5"></section>
         <section id="section6"></section>
