--- a/박진아/index2.html
+++ b/박진아/index2.html
@@ -221,7 +221,103 @@
         </section>
         <!-- //section3 -->
 
-        <section id="section4"></section>
+        <section id="section4">
+            <div class="container">
+                <div class="title">comment</div>
+                <p class="desc2">
+                    복잡한 문제를 마주할 때마다, 한 걸음 물러서서 단위 테스트를 통해 코드를 한 줄씩<br />꼼꼼히 검토하는
+                    것을 중요하게 생각합니다. <br />문제를 해결한 후 느끼는 성취감과 즐거움은 저에게 큰 동기부여가
+                    됩니다.
+                </p>
+                <div class="comments">
+                    <div class="masonry">
+                        <div class="item">
+                            <div class="item__content">
+                                <div class="comment-desc">사이트가 너무 이쁘네요!!</div>
+                                <div class="comment-author"><span>2023.04.03</span>길바닥.</div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="item__content">
+                                <div class="comment-desc">
+                                    복잡한 문제를 마주할 때마다, 한 걸음 물러서서 단위 테스트를 통해 코드를 한 줄씩
+                                    꼼꼼히 검토하는 것을 중요하게 생각합니다. 문제를 해결한 후 느끼는 성취감과 즐거움은
+                                    저에게 큰 동기부여가 됩니다.
+                                </div>
+                                <div class="comment-author"><span>2023.04.03</span>오른쪽.</div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="item__content">
+                                <div class="comment-desc">
+                                    문제를 해결한 후 느끼는 성취감과 즐거움은 저에게 큰 동기부여가 됩니다.
+                                </div>
+                                <div class="comment-author"><span>2023.04.03</span>가나다.</div>
+                            </div>
+                        </div>
+
+                        <div class="item i4">
+                            <div class="item__content">
+                                <div class="comment-desc">
+                                    문제를 해결한 후 느끼는 성취감과 즐거움은 저에게 큰 동기부여가 됩니다.
+                                </div>
+                                <div class="comment-author"><span>2023.04.03</span>가나다.</div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="item__content item__content--medium"></div>
+                        </div>
+                        <div class="item">
+                            <div class="item__content"></div>
+                        </div>
+                        <div class="item">
+                            <div class="item__content item__content--large"></div>
+                        </div>
+                        <div class="item">
+                            <div class="item__content item__content--medium"></div>
+                        </div>
+                        <div class="item">
+                            <div class="item__content item__content--small"></div>
+                        </div>
+                        <div class="item">
+                            <div class="item__content"></div>
+                        </div>
+                        <div class="item">
+                            <div class="item__content item__content--large"></div>
+                        </div>
+                        <div class="item">
+                            <div class="item__content"></div>
+                        </div>
+                        <div class="item">
+                            <div class="item__content item__content--small"></div>
+                        </div>
+                        <div class="item">
+                            <div class="item__content item__content--large"></div>
+                        </div>
+                        <div class="item">
+                            <div class="item__content item__content--medium"></div>
+                        </div>
+                        <div class="item">
+                            <div class="item__content item__content--small"></div>
+                        </div>
+                        <div class="item">
+                            <div class="item__content item__content--medium"></div>
+                        </div>
+                        <div class="item">
+                            <div class="item__content"></div>
+                        </div>
+                        <div class="item com">
+                            <div class="item__content">
+                                <h3>댓글 쓰기</h3>
+                                <input type="text" placeholder="글은 200글자 이내로 작성해주세요!" />
+                                <input type="text" placeholder="이름" />
+                                <button>저장하기</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- //section4 -->
 
         <section id="section5"></section>
