--- a/김진우/index.html
+++ b/김진우/index.html
@@ -265,7 +265,7 @@
             </div>
         </div>
 
-        <div class="layer layer3 react none">
+        <div class="layer layer3 react">
             <div class="layer__contents">
                 <h3>리액트 블로그</h3>
                 <span class="small">최신 코딩 관련 영상을 볼 수 있습니다.</span>
@@ -332,7 +332,7 @@
                         <div class="left">
                             <ul>
                                 <li>유튜브 뮤직 사이트</li>
-                                <li>영화 사이트</li>
+                                <li class="active">영화 사이트</li>
                                 <li>체스 사이트</li>
                             </ul>
                         </div>
