--- a/김혜지/index2.html
+++ b/김혜지/index2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,6 +11,12 @@
     <body>
         <header id="header"></header>
         <!-- //header -->
+
+        <section id="contact">
+            <div class="img"></div>
+            <button>contact me</button>
+        </section>
+        <!-- //contact -->
 
         <section id="section1">
             <h1 class="title">portfolio</h1>
@@ -1050,6 +1056,25 @@
         <!-- //section5 -->
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1/bundled/lenis.min.js"></script>
+        <script src="https://unpkg.com/split-type"></script>
+        <script>
+            const ani4 = gsap.timeline();
+            ani4.to("#contact .img", {
+                scale: 0,
+                y: 100,
+            });
+
+            ScrollTrigger.create({
+                animation: ani4,
+                trigger: "#section1",
+                start: "top top",
+                scrub: true,
+                markers: false,
+            });
+        </script>
 
         <script>
             const circle =
